--- a/page_2/css/styles.css
+++ b/page_2/css/styles.css
@@ -26,7 +26,8 @@ a:hover {
 }
 button:focus,
 input:focus,
-a:focus {
+a:focus,
+textarea:focus {
   outline: none;
 }
 .button {
@@ -45,8 +46,14 @@ a:focus {
   background-color: #e3a103;
 }
 /* typography */
-section {
+.section {
   padding: 10rem 0;
+}
+.section-header {
+  font-family: 'ProximaNova_bold', sans-serif;
+  margin-bottom: 10rem;
+  font-size: 3.6rem;
+  text-align: center;
 }
 /* main */
 .main {
@@ -106,7 +113,7 @@ section {
   width: 100%;
   padding: 1.7rem;
   border: 1px solid #dddddd;
-  border-radius: 3px;
+  border-radius: 5px;
 }
 .main-form label {
   position: absolute;
@@ -150,6 +157,89 @@ section {
   height: 7rem;
   line-height: 7rem;
   color: #1a1820;
+}
+.features-block {
+  text-align: center;
+}
+.features-block h3 {
+  font-family: 'ProximaNova_bold', sans-serif;
+  font-size: 2rem;
+  margin-bottom: 3rem;
+}
+.features-block p {
+  display: inline-block;
+  width: 80%;
+  font-size: 1.4rem;
+}
+.features-img {
+  height: 8rem;
+  margin-bottom: 3rem;
+}
+.features-img img {
+  display: block;
+  margin: 0 auto;
+}
+.slick-active {
+  outline: none;
+}
+.arrow {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 2rem;
+  height: 2rem;
+  border: none;
+  z-index: 99;
+}
+.prev {
+  left: 0;
+  background: url(../img/left-arrow.svg) center no-repeat;
+  background-size: 70%;
+}
+.next {
+  right: 0;
+  background: url(../img/right-arrow.svg) center no-repeat;
+  background-size: 70%;
+}
+.popup {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.popup-form {
+  margin-top: 3rem;
+  padding: 0;
+}
+.popup-close {
+  position: absolute;
+  top: -1.5rem;
+  right: -2rem;
+  width: 2rem;
+  text-align: center;
+  border: none;
+  background-color: transparent;
+  font-size: 3rem;
+  color: #ffffff;
+}
+.popup-content {
+  position: fixed;
+  left: 50%;
+  top: 10%;
+  background-color: #ffffff;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  text-align: center;
+  padding: 4rem 6rem;
+}
+.popup-header {
+  font-family: 'ProximaNova_bold', sans-serif;
 }
 @media (max-width: 991px) {
   .phone-block {
