--- a/page_2/less/styles.less
+++ b/page_2/less/styles.less
@@ -53,7 +53,7 @@ a:hover {
   text-decoration: none;
 }
 
-button, input, a {
+button, input, a, textarea {
   &:focus {
     outline: none;
   }
@@ -75,8 +75,15 @@ button, input, a {
 }
 
 /* typography */
-section {
+.section {
   padding: 10rem 0;
+}
+
+.section-header {
+  .bold();
+  margin-bottom: 10rem;
+  font-size: 3.6rem;
+  text-align: center;
 }
 
 /* main */
@@ -135,7 +142,7 @@ section {
       width: 100%;
       padding: 1.7rem;
       border: 1px solid @border-input;
-      border-radius: 3px;
+      border-radius: 5px;
     }
     label {
       position: absolute;
@@ -187,6 +194,93 @@ section {
   }
 }
 
+.features {
+  &-block {
+    h3 {
+      .bold();
+      font-size: 2rem;
+      margin-bottom: 3rem;
+    }
+    p {
+      display: inline-block;
+      width: 80%;
+      font-size: 1.4rem;
+    }
+    text-align: center;
+  }
+  &-img {
+    height: 8rem;
+    margin-bottom: 3rem;
+    img {
+      display: block;
+      margin: 0 auto;
+    }
+  }
+}
+
+.slick-active {
+  outline: none;
+}
+
+.arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 2rem;
+  height: 2rem;
+  border: none;
+  z-index: 99;
+}
+
+.prev {
+  left: 0;
+  background: url(../img/left-arrow.svg) center no-repeat;
+  background-size: 70%;
+}
+.next {
+  right: 0;
+  background: url(../img/right-arrow.svg) center no-repeat;
+  background-size: 70%;
+}
+
+.popup {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  &-form {
+    margin-top: 3rem;
+    padding: 0;
+  }
+  &-close {
+    position: absolute;
+    top: -1.5rem;
+    right: -2rem;
+    width: 2rem;
+    text-align: center;
+    border: none;
+    background-color: transparent;
+    font-size: 3rem;
+    color: @light;
+  }
+  &-content {
+    position: fixed;
+    left: 50%;
+    top: 10%;
+    background-color: @light;
+    transform: translateX(-50%);
+    text-align: center;
+    padding: 4rem 6rem;
+  }
+  &-header {
+    .bold();
+  }
+}
 
 @media (max-width: 991px) {
   .phone-block {
