--- a/page_2/less/styles.less
+++ b/page_2/less/styles.less
@@ -75,14 +75,22 @@ button, input, a, textarea {
 }
 
 /* typography */
-.section {
+section {
   padding: 10rem 0;
 }
 
 .section-header {
-  .bold();
+  &-light {
+    color: @light;
+  }
+  h2 {
+    .bold();
+    font-size: 3.6rem;
+  }
+  p {
+    font-size: 1.4rem;
+  }
   margin-bottom: 10rem;
-  font-size: 3.6rem;
   text-align: center;
 }
 
@@ -218,6 +226,59 @@ button, input, a, textarea {
   }
 }
 
+.price {
+  background: @icons-color url(../img/prices/prices-bg.jpg) center;
+  &-header-btn {
+    margin-top: 2.5rem;
+  }
+  &-button {
+    text-align: right;
+  }
+  &-block {
+    padding: 1rem 3rem 4rem;
+    min-height: 50rem;
+    background-color: @light;
+    text-align: center;
+    box-shadow: 7px 12px 21px 0px rgba(0, 0, 0, 0.17);
+    h4 {
+      margin: 3rem 0;
+      font-size: 1.9rem;
+      .bold();
+    }
+    img {
+      width: 100%;
+      max-width: 30rem;
+      display: inline-block;
+      margin-bottom: 2rem;
+    }
+  }
+  &-tag {
+    display: block;
+    margin-bottom: 2rem;
+    font-size: 1.9rem;
+    .bold();
+  }
+  &-list {
+    padding: 0;
+    list-style-type: none;
+    min-height: 14rem;
+    line-height: 1.6;
+    font-size: 1.6rem;
+    li {
+      &:before {
+        content: '';
+        display: inline-block;
+        width: 1.4rem;
+        height: 1.4rem;
+        background: url(../img/check.svg) no-repeat center;
+        background-size: 100%;
+        vertical-align: middle;
+        margin-right: 1rem;
+      }
+    }
+  }
+}
+
 .slick-active {
   outline: none;
 }
@@ -295,6 +356,22 @@ button, input, a, textarea {
   .main-title {
     text-align: center;
     padding-bottom: 3rem;
+  }
+  .price {
+    &-button {
+      text-align: center;
+      padding: 2rem 0;
+    }
+    &-header-btn {
+      margin-top: 0;
+      margin-bottom: 2rem;
+    }
+    &-block {
+      margin-top: 2rem;
+    }
+  }
+  .section-header-light {
+    margin-bottom: 0;
   }
 }
 
