--- a/page_2/less/styles.less
+++ b/page_2/less/styles.less
@@ -304,6 +304,64 @@ section {
   background-size: 70%;
 }
 
+.feedback {
+  background: url(../img/feedback/feedback-bg.jpg) no-repeat center;
+  background-size: cover;
+  &-prev-btn {
+    left: -4rem;
+  }
+  &-next-btn {
+    right: -4rem;
+  }
+  &-text {
+    position: relative;
+    margin-top: 2rem;
+    padding: 1rem;
+    border: 2px solid @icons-color;
+    font-style: italic;
+    &::before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: -2rem;
+      left: 4rem;
+      width: 2rem;
+      height: 2rem;
+      background-color: @light;
+      border: 2px solid @icons-color;
+      border-bottom: none;
+      border-top-right-radius: 100px;
+    }
+  }
+  &-slider {
+    padding: 5rem 6rem;
+    background-color: @light;
+    box-shadow: 6px 10px 18px 0 rgba(0, 0, 0, 0.11);
+    .media {
+      margin-top: 5rem;
+      font-size: 1.4rem;
+      h4 {
+        .bold();
+      }
+    }
+    p {
+      font-size: 1.6rem;
+    }
+    &-btn {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 4rem;
+      height: 5rem;
+      background-color: @icons-color;
+      border: none;
+      img {
+        width: 50%;
+      }
+    }
+  }
+}
+
 .popup {
   display: none;
   position: fixed;
@@ -385,6 +443,28 @@ section {
 }
 
 @media (max-width: 513px) {
+  .popup {
+    &-content {
+
+      padding: 4rem 6rem;
+      left: 50%;
+      top: 0;
+    }
+    &-form {
+      margin-top: 0;
+    }
+    &-close {
+    position: absolute;
+    top: -1.5rem;
+    right: -2rem;
+    width: 2rem;
+    text-align: center;
+    border: none;
+    background-color: transparent;
+    font-size: 5rem;
+    color: @danger;
+    }
+  }
   .header {
     text-align: center;
   }
