--- a/page_2/less/styles.less
+++ b/page_2/less/styles.less
@@ -39,6 +39,7 @@
 @bg-light: #f5f5f5;
 @light: #fff;
 @border-input: #ddd;
+@problems-color: #e8e8e8;
 
 /* basic setting */
 html {
@@ -72,6 +73,31 @@ button, input, a, textarea {
     cursor: pointer;
     background-color: darken(@btn-color, 5%);
   }
+}
+
+.form {
+	&-input {
+	  margin: 2rem 0;
+	  display: block;
+	  width: 100%;
+	  padding: 1.7rem;
+	  border: 1px solid @border-input;
+	  border-radius: 5px;
+	}
+	label {
+	  position: absolute;
+	  left: 50%;
+	  transform: translateX(-50%) translateY(-50%);
+	  background-color: @light;
+	  font-size: 1.3rem;
+	  padding: 0.5rem;
+	}
+	&-btn {
+	  display: block;
+	  height: 5.5rem;
+	  width: 100%;
+	  font-size: 1.6rem;
+	}
 }
 
 /* typography */
@@ -144,28 +170,7 @@ section {
         font-size: 1.9rem;
       }
     }
-    &-input {
-      margin: 2rem 0;
-      display: block;
-      width: 100%;
-      padding: 1.7rem;
-      border: 1px solid @border-input;
-      border-radius: 5px;
-    }
-    label {
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%) translateY(-50%);
-      background-color: @light;
-      font-size: 1.3rem;
-      padding: 0.5rem;
-    }
-    &-btn {
-      display: block;
-      height: 5.5rem;
-      width: 100%;
-      font-size: 1.6rem;
-    }
+    
     small {
       display: block;
       margin-top: 1.2rem;
@@ -305,8 +310,23 @@ section {
 }
 
 .feedback {
+  position: relative;
   background: url(../img/feedback/feedback-bg.jpg) no-repeat center;
   background-size: cover;
+  &-form {
+  	background-color: @light;
+  	margin-top: 5rem;
+  	padding: 4rem 10rem;
+  	text-align: center;
+  	h3 {
+  		.bold();
+  		font-size: 2rem;
+      margin-bottom: 1rem;
+  	}
+    label {
+      transform: translate(-50%, 7px);
+    }
+  }
   &-prev-btn {
     left: -4rem;
   }
@@ -360,6 +380,127 @@ section {
       }
     }
   }
+  &-btn {
+    max-width: 30rem;
+    margin: auto;
+  }
+}
+
+.hand {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  max-width: 30rem;
+}
+
+.scheme {
+  background: url(../img/scheme/scheme-bg.png) bottom -10rem right -15rem no-repeat;
+  background-size: 65rem;
+  &-block {
+    min-height: 30rem;
+    h3 {
+      font-size: 2.2rem;
+      .bold();
+    }
+  }
+}
+
+.all-inclusive {
+  background-color: @bg-light;
+  .media {
+    min-height: 9rem;
+    h4 {
+      .bold();
+      font-size: 1.6rem;
+    }
+    p {
+      font-size: 1.1rem;
+    }
+  }
+  .section-header-active {
+    h2 {
+      color: @icons-color;
+      margin-bottom: 4rem;
+    }
+  }
+}
+
+.circle {
+  display: inline-block;
+  background-color: @icons-color;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  &-border {
+    display: inline-block;
+    width: 5rem;
+    height: 5rem;
+    padding: 0.3rem;
+    border: 2px solid @icons-color;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 4rem;
+    color: @light;
+    .bold();
+    font-size: 1.9rem;
+  }
+}
+
+.problems {
+  position: relative;
+  &-woman {
+    position: absolute;
+    width: 30rem;
+    bottom: 0;
+    left: 50%;
+    margin-left: -19rem;
+  }
+  &-list {
+    min-height: 35rem;
+    border: 4px solid;
+    margin-bottom: 2rem;
+    padding: 2rem;
+    h4 {
+      font-size: 2.1rem;
+      .bold();
+    }
+    ul {
+      list-style: none;
+      padding-left: 0;
+      padding-top: 2rem;
+      li {
+        position: relative;
+        padding-left: 3.5rem;
+        margin-bottom: 3rem;
+        &:before {
+          position: absolute;
+          content: '';
+          left: 0;
+          top: 50%;
+          transform: translateY(-50%);
+          width: 3rem;
+          height: 3rem;
+          background-color: #000;
+        }
+      }
+    }
+    &-good {
+      ul li:before {
+        background: url(../img/success-icon.png) center no-repeat;
+        background-size: 70%;
+      }
+    }
+    &-bad {
+      border-color: @problems-color;
+      h4 {
+        opacity: 0.5;
+      }
+      ul li:before {
+        background: url(../img/cancel-icon.png) center no-repeat;
+        background-size: 70%;
+      }
+    }
+  }
 }
 
 .popup {
@@ -401,6 +542,27 @@ section {
   }
 }
 
+@media (max-width: 1199px) {
+  .feedback {
+    &-form {
+      padding: 3rem 5rem;
+    }
+    .fotorama {
+      margin-bottom: 3rem;
+    }
+  }
+  .all-inclusive {
+    .media {
+      min-height: 9rem;
+    }
+  }
+  .problems {
+    &-list {
+      min-height: 40rem;
+    }
+  }
+}
+
 @media (max-width: 991px) {
   .phone-block {
     text-align: center;
@@ -431,21 +593,63 @@ section {
   .section-header-light {
     margin-bottom: 0;
   }
+  .feedback {
+    &-form {
+      label {
+        transform: translate(-50%, -50%);
+      }
+    }
+  }
+  .hand {
+    display: none;
+  }
+  .problems {
+    &-list {
+      min-height: auto;
+    }
+    &-woman {
+      display: none;
+    }
+  }
 }
 
 @media (max-width: 767px) {
   .main {
     background-position: top left;
   }
+  .header {
+    text-align: center;
+  }
   .wrap-block {
     text-align: center;
+  }
+  .features {
+    &-block {
+      p {
+        width: 60%;
+      }
+    }
+  }
+  .feedback {
+    &-prev-btn {
+      left: 0;
+    }
+    &-next-btn {
+      right: 0;
+    }
+  }
+  .scheme {
+    background: none;
+    text-align: center;
+    &-block {
+      min-height: 20rem;
+    }
   }
 }
 
 @media (max-width: 513px) {
   .popup {
     &-content {
-
       padding: 4rem 6rem;
       left: 50%;
       top: 0;
@@ -469,8 +673,8 @@ section {
     text-align: center;
   }
   .main-content {
-      h1 {
-       font-size: 2.4rem;
-      }
+    h1 {
+      font-size: 2.4rem;
     }
+  }
 }
