--- a/page_2/css/styles.css
+++ b/page_2/css/styles.css
@@ -45,7 +45,8 @@ textarea:focus {
   cursor: pointer;
   background-color: #e3a103;
 }
-.form-input {
+.form-input,
+.form-textarea {
   margin: 2rem 0;
   display: block;
   width: 100%;
@@ -406,7 +407,7 @@ section {
 }
 .problems-list {
   min-height: 35rem;
-  border: 4px solid;
+  border: 4px solid #46b814;
   margin-bottom: 2rem;
   padding: 2rem;
 }
@@ -448,6 +449,100 @@ section {
 .problems-list-bad ul li:before {
   background: url(../img/cancel-icon.png) center no-repeat;
   background-size: 70%;
+}
+.materials {
+  background: #ffffff url(../img/materials/materials-bg.jpg) center no-repeat;
+  background-size: cover;
+}
+.materials-slider {
+  padding-top: 5rem;
+}
+.materials-link {
+  color: #46b814;
+  border-bottom: 1px dashed #46b814;
+}
+.materials-link:hover {
+  color: #348a0f;
+}
+.materials-offer {
+  margin-top: 4rem;
+}
+.materials img {
+  display: block;
+  margin: 0 auto;
+}
+.tour {
+  background: #ffffff url(../img/tour.jpg) center no-repeat;
+  background-size: cover;
+}
+.tour-subtitle {
+  font-size: 2.2rem;
+}
+.upsell {
+  background: #286b0a;
+}
+.upsell-block {
+  text-align: center;
+  color: #ffffff;
+  min-height: 30rem;
+}
+.upsell-blocks {
+  margin-top: 3rem;
+}
+.upsell-block img {
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 2rem;
+  max-width: 30rem;
+}
+.upsell-block p {
+  font-size: 2rem;
+}
+.contacts {
+  background: #ffffff url(../img/contacts-bg.jpg) center no-repeat;
+  background-size: cover;
+}
+.contacts p {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.contacts h2 {
+  font-family: 'ProximaNova_bold', sans-serif;
+}
+.contacts-link {
+  display: inline-block;
+  color: #1a1820;
+  border-bottom: 1px dashed #1a1820;
+}
+.contacts-link:hover {
+  color: #49445a;
+}
+.contacts-form {
+  border: 1px solid #e8e8e8;
+}
+.contacts-form h2 {
+  font-size: 1.9rem;
+  font-family: 'ProximaNova_regular', sans-serif;
+  margin-bottom: 3rem;
+}
+.contacts-form button {
+  font-size: 1.4rem;
+}
+footer {
+  padding: 4rem 0;
+}
+.footer-contacts {
+  text-align: center;
+  padding-top: 0.5rem;
+}
+.footer-contacts p {
+  margin-top: -3rem;
+}
+.footer-dev {
+  text-align: right;
+}
+.footer-dev p {
+  margin-bottom: -2rem;
 }
 .popup {
   display: none;
@@ -542,6 +637,28 @@ section {
   }
   .problems-woman {
     display: none;
+  }
+  .tour {
+    background: none;
+    background-color: #f5f5f5;
+  }
+  .contacts {
+    background: none;
+  }
+  .contacts-form {
+    margin-top: 3rem;
+  }
+  footer {
+    text-align: center;
+  }
+  .footer-contacts {
+    margin: 3rem 0;
+  }
+  .footer-dev {
+    text-align: center;
+  }
+  .footer-dev p {
+    margin-bottom: 0;
   }
 }
 @media (max-width: 767px) {
