--- a/page_2/less/styles.less
+++ b/page_2/less/styles.less
@@ -40,6 +40,7 @@
 @light: #fff;
 @border-input: #ddd;
 @problems-color: #e8e8e8;
+@add-services: #286b0a;
 
 /* basic setting */
 html {
@@ -76,7 +77,7 @@ button, input, a, textarea {
 }
 
 .form {
-	&-input {
+	&-input, &-textarea {
 	  margin: 2rem 0;
 	  display: block;
 	  width: 100%;
@@ -457,7 +458,7 @@ section {
   }
   &-list {
     min-height: 35rem;
-    border: 4px solid;
+    border: 4px solid @icons-color;
     margin-bottom: 2rem;
     padding: 2rem;
     h4 {
@@ -499,6 +500,108 @@ section {
         background: url(../img/cancel-icon.png) center no-repeat;
         background-size: 70%;
       }
+    }
+  }
+}
+
+.materials {
+  background: @light url(../img/materials/materials-bg.jpg) center no-repeat;
+  background-size: cover; 
+  &-slider {
+    padding-top: 5rem;
+  }
+  &-link {
+    color: @icons-color;
+    border-bottom: 1px dashed @icons-color;
+    &:hover {
+      color: darken(@icons-color, 10%);
+    }
+  }
+  &-offer {
+    margin-top: 4rem;
+  }
+  img {
+    display: block;
+    margin: 0 auto;
+  }
+}
+
+.tour {
+  background: @light url(../img/tour.jpg) center no-repeat;
+  background-size: cover;
+  &-subtitle {
+    font-size: 2.2rem;
+  }
+}
+
+.upsell {
+  background: @add-services;
+  &-block {
+    &s {
+      margin-top: 3rem;
+    }
+    img {
+      display: inline-block;
+      width: 100%;
+      margin-bottom: 2rem;
+      max-width: 30rem;
+    }
+    p {
+      font-size: 2rem;
+    }
+    text-align: center;
+    color: @light;
+    min-height: 30rem;
+  }
+}
+
+.contacts {
+  background: @light url(../img/contacts-bg.jpg) center no-repeat;
+  background-size: cover;
+  p {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+  h2 {
+    .bold();
+  }
+  &-link {
+    display: inline-block;
+    color: @text;
+    border-bottom: 1px dashed @text;
+    &:hover {
+      color: lighten(@text, 20%);
+    }
+  }
+  &-form {
+    border: 1px solid @problems-color;
+    h2 {
+      font-size: 1.9rem;
+      .reg();
+      margin-bottom: 3rem;
+    }
+    button {
+      font-size: 1.4rem;
+    }
+  }
+}
+
+footer {
+  padding: 4rem 0;
+}
+
+.footer {
+  &-contacts {
+    text-align: center;
+    padding-top: 0.5rem;
+    p {
+      margin-top: -3rem;
+    }
+  }
+  &-dev {
+    text-align: right;
+    p {
+      margin-bottom: -2rem;
     }
   }
 }
@@ -609,6 +712,30 @@ section {
     }
     &-woman {
       display: none;
+    }
+  }
+  .tour {
+    background: none;
+    background-color: @bg-light;
+  }
+  .contacts {
+    background: none;
+    &-form {
+      margin-top: 3rem;
+    }
+  }
+  footer {
+    text-align: center;
+  }
+  .footer {
+    &-contacts {
+      margin: 3rem 0;
+    }
+    &-dev {
+      text-align: center;
+      p {
+        margin-bottom: 0;
+      }
     }
   }
 }
